--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -1461,11 +1461,8 @@
 - name: _svd_helper(Tensor self, bool some, bool compute_uv) -> (Tensor U, Tensor S, Tensor V)
   self: svd_backward(grads, self, some, compute_uv, U, S, V)
 
-- name: symeig(Tensor self, bool eigenvectors=False, bool upper=True) -> (Tensor eigenvalues, Tensor eigenvectors)
-  self: eigh_backward(grads, self, eigenvectors, eigenvalues, eigenvectors_return)
-
 - name: linalg_eigh(Tensor self, str UPLO="L") -> (Tensor eigenvalues, Tensor eigenvectors)
-  self: eigh_backward(grads, self, /*eigenvectors=*/true, eigenvalues, eigenvectors)
+  self: eigh_backward(grads, self, eigenvalues, eigenvectors)
   eigenvalues: eigh_jvp_eigenvalues(self_t, eigenvalues, eigenvectors)
   eigenvectors: eigh_jvp_eigenvectors(self_t, eigenvalues, eigenvectors)
 
