--- a/torch/utils/data/dataset.pyi.in
+++ b/torch/utils/data/dataset.pyi.in
@@ -30,7 +30,7 @@ class MapDataPipe(Dataset[T_co], metaclass=_DataPipeMeta):
     @classmethod
     def register_function(cls, function_name: Any, function: Any) -> None: ...
     @classmethod
-    def register_datapipe_as_function(cls, function_name: Any, cls_to_register: Any, enable_df_api_tracing: bool = ...): ...
+    def register_datapipe_as_function(cls, function_name: Any, cls_to_register: Any): ...
     ${MapDataPipeMethods}
 
 class IterableDataset(Dataset[T_co]):
